Got things aligned in a more correct way

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -34,8 +34,8 @@ body {
 }
 
 .yeti-carousel-image {
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
 }
 
 .swal-button {
@@ -146,8 +146,8 @@ input[type="number"]::-webkit-outer-spin-button {
 .main {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   text-align: center;
-  padding: 5;
   margin: 12vh 0vh;
   max-width: 100%;
   height: 70vh;
@@ -158,7 +158,6 @@ input[type="number"]::-webkit-outer-spin-button {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5%;
 }
 
 .main-right {
@@ -210,9 +209,6 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .yeti-banner {
-  /* width: 50vw; */
-  /* display: flex;
-  justify-content: center; */
   height: 100%;
 }
 
